# dot-fi

./: README.md  index.html  package.json  tsconfig.json  vite.config.ts
contracts/: build-all.sh
contracts/hive_post/: lib.rs
contracts/nft_badges/: Cargo.toml  lib.rs
ink-contracts/: Cargo.toml
ink-contracts/highlighted_posts/: Cargo.toml
ink-contracts/hive_post/: Cargo.toml
src/: App.tsx  Router.tsx  index.css
src/api/: client.js  loadSupabase.ts  supabase_types.ts  usePostDetail.ts  usePostList.ts  useProfile.ts
src/components/blocks/: CarouselBanner.tsx  charts-01.tsx  dasbhoard-02.tsx  dashboard-05.tsx  dashboard-06.tsx
src/components/content/: ContentCard.tsx  index.tsx
src/components/create-form/: Automation.tsx  CryptoForm.tsx  Deadline.tsx  SelectTags.tsx  Tooltips.tsx
src/components/custom/: CardProduct.tsx
src/components/homepage/: Content.tsx  Main.tsx  TabsSocial.tsx
src/components/layouts/: AppLayout.tsx  MenuDashboard.tsx  NewLayout.tsx  RightBar.tsx
src/components/posts/: CardSubmission.tsx  CommentForm.tsx  CreatePost.tsx  HiveCreate.tsx  PostCard.tsx  PostList.tsx
src/components/product/: MyProductList.tsx  ProductList.tsx
src/components/profile/: DialogConnect.tsx  DisplayCard.tsx
src/components/project/: ProjectList.tsx  ProjectTableEtalase.tsx
src/components/radix-website/: BoxLink.tsx  ExampleThemesEcommerce.tsx  ExampleThemesMusicApp.tsx  Footer.tsx  (+1 more)
src/config/: app.ts  menu.ts
src/contexts/: ThemeContext.tsx
src/pages/: Dashboard.tsx  Empty.tsx  Homepage.tsx  Post.tsx  Sale.tsx  Twitterpage.tsx
(+30 files in other folders)
